Check Out orde-info api Integrated https://greenboxdev.atlassian.net/browse/CV2ANDRIOD-581

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".view.CheckOutPaymentActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.OnboardActivity"
             android:configChanges="uiMode"
