disabled analytics for debug build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
         }
         debug {
             buildConfigField 'boolean', 'LOGGING_ENABLED', 'true'
-            buildConfigField 'boolean', 'ANALYTICS_ENABLED', 'true'
+            buildConfigField 'boolean', 'ANALYTICS_ENABLED', 'false'
             testCoverageEnabled true
         }
     }
