--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -618,6 +618,7 @@
             android:configChanges="uiMode"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:finishOnTaskLaunch="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".view.business.SelectWithdrawMethodActivity"
