--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         minSdk 26
         targetSdk 31
         versionCode 1
-        versionName "2.0.0"
+        versionName "2.1.3"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -97,6 +97,7 @@ android {
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
+        enable "Interoperability"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
@@ -122,6 +123,9 @@ android {
 }
 
 dependencies {
+
+    implementation project(":scan-camerax")
+    implementation project(":cardscan-ui")
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -190,4 +194,5 @@ dependencies {
     //End
 
     implementation "com.airbnb.android:lottie:3.4.0"
+
 }
