--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ android {
         qa {
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-auto.coyni.com/\"'
             buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-qa.coyni.com/\"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"http://api-perf.coyni.com/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://sat-qa-api-1367964791.us-east-1.elb.amazonaws.com/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://54.204.152.195:9001/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://3.94.123.86:9001/\"'
