--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         applicationId "com.coyni.mapp"
         minSdk 26
         targetSdk 31
-        versionCode 1
+        versionCode 2
         versionName "1.0.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -38,7 +38,7 @@ android {
 
     buildTypes {
         release {
-            buildConfigField 'boolean', 'LOGGING_ENABLED', 'true'
+            buildConfigField 'boolean', 'LOGGING_ENABLED', 'false'
             buildConfigField 'boolean', 'ANALYTICS_ENABLED', 'true'
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
