--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.microblink.com' }
+//        maven { url 'https://maven.microblink.com' }
 
         mavenLocal()
         mavenCentral()
