--- a/app/build.gradle
+++ b/app/build.gradle
@@ -196,4 +196,8 @@ dependencies {
 
     implementation "com.airbnb.android:lottie:3.4.0"
 
+    //Websocket
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.squareup.okhttp3:mockwebserver:3.12.1'
+    //End
 }
