--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" /> <!-- <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" /> -->
-    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
-    <!--    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />-->
-
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" /> <!-- <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" /> -->
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.any" />
     <uses-feature
@@ -49,6 +47,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ManualBankVerficationSucessFailedActivity"
+            android:exported="false" />
         <activity
             android:name="com.coyni.mapp.view.OnboardActivity"
             android:configChanges="uiMode"
@@ -87,13 +88,11 @@
             android:name="com.coyni.mapp.view.CheckOutPaymentActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-
-        <activity android:name=".view.GetHelpActivity"
+        <activity
+            android:name=".view.GetHelpActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>
-
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name="com.coyni.mapp.view.GetHelpWebViewActivity"
             android:exported="false"
@@ -565,12 +564,12 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" /> <!-- //Business -->
-<!--        <activity-->
-<!--            android:name=".view.business.RefundTransactionSuccessActivity"-->
-<!--            android:exported="false"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"-->
-<!--            android:windowSoftInputMode="stateAlwaysHidden" />-->
+        <!-- <activity -->
+        <!-- android:name=".view.business.RefundTransactionSuccessActivity" -->
+        <!-- android:exported="false" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" -->
+        <!-- android:windowSoftInputMode="stateAlwaysHidden" /> -->
         <activity
             android:name=".view.business.CompanyInformationActivity"
             android:exported="false"
@@ -783,7 +782,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:windowSoftInputMode="stateAlwaysHidden" />
-
         <activity
             android:name=".view.business.AddManualBankAccount"
             android:configChanges="uiMode"
@@ -791,8 +789,7 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:windowSoftInputMode="adjustResize"  />
-
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".view.business.PDFWebViewActivity"
             android:exported="false"
