--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         applicationId "com.coyni.mapp"
         minSdk 26
         targetSdk 31
-        versionCode 2
+        versionCode 5
         versionName "1.0.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -195,5 +195,10 @@ dependencies {
     //End
 
     implementation "com.airbnb.android:lottie:3.4.0"
+
+    //Websocket
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.squareup.okhttp3:mockwebserver:3.12.1'
+    //End
 
 }
