--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
     productFlavors {
         uat {
             buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-beta.coyni.com\"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-live.coyni.com\"'
             buildConfigField 'String', 'Referer', '\"https://members.coyni.com\"'
             buildConfigField 'String', 'Country_Code', '\"US\"'
             buildConfigField 'String', 'MATOMO_SERVER', '\"https://qa-analytics.coyni.com\"'
