--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,8 @@ android {
             buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'false'
         }
         dev {
-            buildConfigField 'String', 'URL_PRODUCTION', '\"http://api-gateway-dev-1893379566.us-east-1.elb.amazonaws.com:80/\"'
+            buildConfigField 'String', 'URL_PRODUCTION', '\"http://dev23-api-gateway-511281183.us-east-1.elb.amazonaws.com:80/\"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"http://api-gateway-dev-1893379566.us-east-1.elb.amazonaws.com:80/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://54.172.13.210:9001/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://18.234.239.29:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
