--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,31 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:name=".utils.MyApplication"
-        android:allowBackup="false"
-        android:hardwareAccelerated="true"
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:preserveLegacyExternalStorage="true"
-        android:protectionLevel="signature"
-        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MPOS"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/AppTheme"
+        tools:targetApi="31">
+        <activity
+            android:name=".view.TransactionListActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".view.MainActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".view.MposDashboardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
     </application>
 
