Generate Qr UI design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,27 +14,38 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".view.TransactionListActivity"
-            android:exported="false"></activity>
-        <activity
-            android:name=".view.MainActivity"
-            android:exported="false"></activity>
-        <activity
-            android:name=".view.MposDashboardActivity"
-            android:usesCleartextTraffic="true"></activity>
-
-        <activity
-            android:name=".view.GenarateQrActivity"
+            android:name=".baseclass.BaseActivity"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
         <activity
-            android:name=".view.PinActivity"
+            android:name=".view.TransactionListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.MposDashboardActivity"
+            android:usesCleartextTraffic="true" />
+        <activity
+            android:name=".view.GenarateQrActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.PinActivity"
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".view.OnboardActivity"
@@ -51,10 +62,6 @@
             android:name=".view.LoginActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
-        <activity
-            android:name=".view.MainActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
