pin and qr design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,7 @@
         <activity
             android:name=".view.TransactionListActivity"
             android:exported="false" />
-            android:name=".view.TransactionDetailsActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".view.TransactionListActivity"
-            android:exported="false" />
-            android:name=".view.MainActivity"
-            android:exported="false" />
+
         <activity
             android:name=".view.MposDashboardActivity"
             android:usesCleartextTraffic="true" />
@@ -46,13 +39,7 @@
         </activity>
         <activity
             android:name=".view.PinActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".view.OnboardActivity"
             android:exported="true">
