Refund ui design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.RefundTransactionActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".baseclass.BaseActivity"
             android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
         <activity
             android:name=".view.TransactionListActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.MposDashboardActivity"
             android:usesCleartextTraffic="true" />
@@ -39,7 +39,7 @@
         </activity>
         <activity
             android:name=".view.PinActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".view.OnboardActivity"
             android:exported="true">
