--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,5 +161,8 @@ dependencies {
 
     implementation 'org.apache.httpcomponents:httpcore:4.4.10'
     implementation 'org.apache.httpcomponents:httpclient:4.5.6'
-    
+
+    //lottie
+    implementation "com.airbnb.android:lottie:3.4.0"
+
 }
