--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,21 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".baseclass.BaseActivity"
+            android:name=".view.SucessFlowActivity"
             android:exported="false">
         </activity>
         <activity
+            android:name=".baseclass.BaseActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.TransactionListActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.TransactionDetailsActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.MposDashboardActivity"
             android:usesCleartextTraffic="true" />
-
         <activity
             android:name=".view.LoginActivity"
             android:exported="true"
@@ -40,14 +40,12 @@
         <activity
             android:name=".view.MainActivity"
             android:exported="true" />
-
         <activity
             android:name=".view.PinActivity"
             android:exported="true" />
         <activity
             android:name=".view.GenarateQrActivity"
-            android:exported="true"></activity>
-
+            android:exported="true" />
         <activity
             android:name=".view.OnboardActivity"
             android:exported="true">
@@ -57,7 +55,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
