Refund UI design and functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,5 +161,7 @@ dependencies {
 
     implementation 'org.apache.httpcomponents:httpcore:4.4.10'
     implementation 'org.apache.httpcomponents:httpclient:4.5.6'
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
+    implementation 'com.google.zxing:core:3.4.1'
     
 }
