--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,16 @@
         tools:targetApi="31">
         <activity
             android:name=".view.RefundTransactionActivity"
-            android:exported="false">
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".baseclass.BaseActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".view.TransactionListActivity"
             android:exported="false" />
@@ -36,18 +40,10 @@
         <activity
             android:name=".view.GenarateQrActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".view.PinActivity"
             android:exported="true" />
-        <activity
-            android:name=".view.OnboardActivity"
-            android:exported="true">
 
         <activity
             android:name=".view.LoginActivity"
@@ -61,13 +57,6 @@
             android:exported="true" />
 
         <activity
-            android:name=".view.PinActivity"
-            android:exported="true" />
-        <activity
-            android:name=".view.GenarateQrActivity"
-            android:exported="true"></activity>
-
-        <activity
             android:name=".view.OnboardActivity"
             android:exported="true">
             <intent-filter>
@@ -76,7 +65,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
 </manifest>
