--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,19 @@
         <activity
             android:name=".view.RefundTransactionActivity"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-            android:name=".view.SucessFlowActivity"
-            android:exported="false">
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
+
         </activity>
         <activity
+            android:name=".view.SucessFlowActivity"
+            android:exported="false" />
+        <activity
             android:name=".baseclass.BaseActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".view.TransactionListActivity"
             android:exported="false" />
@@ -40,6 +42,11 @@
         <activity
             android:name=".view.GenarateQrActivity"
             android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".view.PinActivity"
@@ -59,11 +66,11 @@
         <activity
             android:name=".view.OnboardActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                        <intent-filter>
+                            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                            <category android:name="android.intent.category.LAUNCHER" />
+                        </intent-filter>
         </activity>
     </application>
 </manifest>
