--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".baseclass.BaseActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".view.TransactionListActivity"
             android:exported="false" />
@@ -32,8 +31,10 @@
 
         <activity
             android:name=".view.LoginActivity"
-            android:exported="true"
+            android:configChanges="uiMode"
+            android:exported="false"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".view.TerminalDeactivatedActivity"
             android:exported="false" />
@@ -46,7 +47,7 @@
             android:exported="true" />
         <activity
             android:name=".view.GenarateQrActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <activity
             android:name=".view.OnboardActivity"
