--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".view.TerminalDeactivatedActivity"
+            android:name=".view.StatusFailedActivity"
             android:exported="false" />
         <activity
             android:name=".view.MainActivity"
